--- a/application/inference/services/bentofile.yaml
+++ b/application/inference/services/bentofile.yaml
@@ -1,13 +1,23 @@
-service: "service.py:svc"
-description: "Iris flower classification service"
+service: "iris_service:svc"
+description: "Iris flower classification service with monitoring"
 labels:
   owner: mlops-team
   project: iris-classification
+  environment: production
 include:
-  - "*.py"
+  - "iris_service.py"
+exclude:
+  - "tests/"
+  - "*.pyc"
+  - "__pycache__/"
 python:
   packages:
     - scikit-learn
+    - pandas
     - numpy
-models:
-  - iris_clf:latest
+    - pydantic
+    - prometheus-client
+docker:
+  distro: debian
+  python_version: "3.10"
+  cuda_version: null
